Update header description in index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
   <header class="header">
     <img src="https://kalleder.ro/Josef%20Kalleder%20-%20Home_files/2.jpg" alt="Josef Kalleder">
     <h1>Josef Kalleder</h1>
-    <p>Certified Professional Coach & Consultant</p>
+    <p>I build complex IT systems and help people build themselves. Worldwide delivery.</p>
+    <p>25y IT • 20y Entrepreneur • 5y Coaching and Consulting</p>
     <p><a href="https://www.linkedin.com/in/josefkalleder/" target="_blank">LinkedIn Profile</a></p>
   </header>
 
