--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <img src="https://kalleder.ro/Josef%20Kalleder%20-%20Home_files/2.jpg" alt="Josef Kalleder">
     <h1>Josef Kalleder</h1>
     <p>I build complex IT systems and help people build themselves. Worldwide delivery.</p>
-    <p class="subtitle">25 years IT • 20 years Entrepreneur • 5 years Coaching and Consulting</p>
+    <p class="subtitle">25 years IT • 20 years business development • 5 years Coaching and Consulting</p>
   </section>
 
   <!-- About Section -->
@@ -244,7 +244,7 @@
         </div>
         <div class="service-card-content">
           <h3>I'm interested in Coaching</h3>
-          <p>Transformational coaching for leaders, entrepreneurs, and individuals seeking breakthrough performance. Certified coach with 200+ hours of experience helping clients achieve their most ambitious goals.</p>
+          <p>Transformational coaching for leaders, entrepreneurs, and individuals seeking breakthrough performance. Certified coach with hundreds of hours of experience helping clients achieve their most ambitious goals.</p>
           <span class="service-card-cta">Explore Coaching Services →</span>
         </div>
       </a>
@@ -256,7 +256,7 @@
         </div>
         <div class="service-card-content">
           <h3>I'm interested in IT Systems</h3>
-          <p>Enterprise-grade IT systems design and development with 25 years of experience. From cybersecurity consulting to nation-wide platform development, delivering complex solutions worldwide.</p>
+          <p>Enterprise-grade IT systems design and development with 25 years of experience. From industry specific to nation-wide platform development, delivering complex solutions worldwide.</p>
           <span class="service-card-cta">Explore IT Services →</span>
         </div>
       </a>
@@ -268,7 +268,7 @@
         </div>
         <div class="service-card-content">
           <h3>I'm interested in expanding my business in Romania</h3>
-          <p>Expert guidance for international corporations entering Romanian and Moldovan markets. 20+ years of entrepreneurial experience, established networks, and proven market entry strategies.</p>
+          <p>Expert guidance for international corporations entering Romanian and Moldovan markets. 20+ years of business development experience, local knowledge, and proven market entry strategies.</p>
           <span class="service-card-cta">Explore Business Services →</span>
         </div>
       </a>
@@ -279,11 +279,9 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-contact">
-      <a href="mailto:kalleder@gmail.com">kalleder@gmail.com</a>
-      <a href="tel:+40745267192">+40 745 267 192</a>
       <a href="https://www.linkedin.com/in/josefkalleder/" target="_blank">LinkedIn</a>
     </div>
-    <p>&copy; 2024 Josef Kalleder. All rights reserved.</p>
+    <p>&copy; 2026 Josef Kalleder. All rights reserved.</p>
   </footer>
 </body>
 </html>
