--- a/business-romania.html
+++ b/business-romania.html
@@ -251,8 +251,8 @@
   </section>
 
   <section id="contact">
-    <h2>Let's Discuss Your Expansion</h2>
-    <p>Ready to explore opportunities in Romania and Moldova? Let's have a conversation about your business goals and how I can help you succeed in these markets.</p>
+    <h2>Strict non compete policy</h2>
+    <p>We operate with a strict non compete policy which means we only accept one partner in any specific industry. If you're ready to explore opportunities in Romania and Moldova let's have a conversation and see if you qualify and how I can help you surpass your business goals in these markets.</p>
 
 
   </section>
